Add tasks to quest response
